make check: fix whitespace detection for out-of-tree builds
If doing 'make check' from a 'build' subdirectory, it currently checks
for extra whitespace in files in this directory instead of the top
directory.

--- a/Makefile.am
+++ b/Makefile.am
@@ -67,7 +67,7 @@ valgrindcheck:
 .PHONY: geos_revision.h
 
 check-local:
-	! find . -name '*.cpp' -o -name '*.h' | \
+	! find $(srcdir) -name '*.cpp' -o -name '*.h' | \
 		grep -v tests/xmltester/tinyxml | \
 		grep -v include/geos/algorithm/ttmath | \
 		xargs grep -n '[[:space:]]$$'
