--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-7','ccache']
+          packages: ['g++-7','ccache','git2cl']
       env:
         - E="TOOL=autotools && CXX=g++-7 && ARCH=-m64 && CC=gcc-7"
 
@@ -51,7 +51,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-7-multilib','gcc-7-multilib','g++-multilib','gcc-multilib','ccache']
+          packages: ['g++-7-multilib','gcc-7-multilib','g++-multilib','gcc-multilib','ccache','git2cl']
       env:
         - E="TOOL=autotools && CXX=g++-7 && ARCH=-m32 && CC=gcc-7"
 
@@ -75,7 +75,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-4.8','ccache']
+          packages: ['g++-4.8','ccache','git2cl']
       env:
         - E="TOOL=autotools && CXX=g++-4.8 && ARCH=-m64 && CC=gcc-4.8"
 
@@ -87,7 +87,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['g++-4.8-multilib','gcc-4.8-multilib','g++-multilib','gcc-multilib','ccache']
+          packages: ['g++-4.8-multilib','gcc-4.8-multilib','g++-multilib','gcc-multilib','ccache','git2cl']
       env:
         - E="TOOL=autotools && CXX=g++-4.8 && ARCH=-m32 && CC=gcc-4.8"
 
@@ -111,7 +111,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['clang-3.9','ccache']
+          packages: ['clang-3.9','ccache','git2cl']
       env:
         - E="TOOL=autotools && CXX=clang++-3.9 && ARCH=-m64 && CC=clang-3.9"
 
@@ -123,7 +123,7 @@ matrix:
       addons:
         apt:
           sources: *sources
-          packages: ['clang','ccache']
+          packages: ['clang','ccache','git2cl']
       env:
         - E="TOOL=autotools && CXX=clang++ && ARCH=-m64 && CC=clang"
 
