Link against static lib if shared lib is disabled
Create "interface" targets for "geos" and "geos_c" that redirect to
"geos-static" target if shared libs are not being built.

--- a/capi/CMakeLists.txt
+++ b/capi/CMakeLists.txt
@@ -42,6 +42,9 @@ if(NOT GEOS_ENABLE_MACOSX_FRAMEWORK AND GEOS_BUILD_SHARED)
 
   add_dependencies(geos_c geos_revision)
 
+else()
+  add_library(geos_c INTERFACE)
+  target_link_libraries(geos_c INTERFACE geos-static)
 endif()
 
 
